--- a/app/globals.css
+++ b/app/globals.css
@@ -34,12 +34,33 @@ body {
 
 .meme-body {
   position: relative;
-  font-family: "Lucida Console", Monaco, monospace;
   font-weight: 300;
-  background: #fbb9f5 url("../public/assets/gif/bardFalling.gif") no-repeat center center fixed;
+  background: #fbb9f5 url('../public/assets/gif/bardFalling.gif') no-repeat
+    center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
   height: auto;
+}
+
+.marquee {  
+  white-space: nowrap;
+  overflow: hidden;
+  box-sizing: border-box;
+}
+
+.marquee p {
+  display: inline-block;
+  padding-left: 100%;
+  animation: marquee 50s linear infinite;
+}
+
+@keyframes marquee {
+  0% {
+    transform: translate(0, 0);
+  }
+  100% {
+    transform: translate(-100%, 0);
+  }
 }
