--- a/app/globals.css
+++ b/app/globals.css
@@ -42,6 +42,7 @@ body {
   -o-background-size: cover;
   background-size: cover;
   height: auto;
+  overflow: hidden;
 }
 
 .marquee {  
@@ -63,4 +64,108 @@ body {
   100% {
     transform: translate(-100%, 0);
   }
+}
+
+.bouncer, .bouncer-image {
+  width: 100px;
+  height: 100px;
+}
+
+.bouncer {
+  position:absolute;
+  -webkit-animation: x 5s linear infinite alternate;
+          animation: x 5s linear infinite alternate;
+}
+
+.bouncer-image {
+  padding:10px;
+  -webkit-animation: y 3s linear infinite alternate;
+          animation: y 3s linear infinite alternate;
+}
+
+.x0{
+  -webkit-animation: x 5s linear infinite alternate;
+          animation: x 5s linear infinite alternate;
+}
+.x1{
+  -webkit-animation: x 4s linear infinite alternate;
+          animation: x 4s linear infinite alternate;
+}
+.x2{
+  -webkit-animation: x 3s linear infinite alternate;
+          animation: x 3s linear infinite alternate;
+}
+.x3{
+  -webkit-animation: x 2s linear infinite alternate;
+          animation: x 2s linear infinite alternate;
+}
+.y0{
+  -webkit-animation: y 2s linear infinite alternate;
+          animation: y 2s linear infinite alternate;
+}
+
+.y1{
+  -webkit-animation: y 4s linear infinite alternate;
+          animation: y 4s linear infinite alternate;
+}
+.y2{
+  -webkit-animation: y 5s linear infinite alternate;
+          animation: y 5s linear infinite alternate;
+}
+.y3{
+  -webkit-animation: y 6s linear infinite alternate;
+          animation: y 6s linear infinite alternate;
+}
+
+
+.bouncer:hover,.bouncer-image:hover
+{
+    -webkit-animation-play-state: paused;
+    -moz-animation-play-state: paused;
+    -o-animation-play-state: paused;
+    animation-play-state: paused;
+}
+.bouncer-image:hover{
+  background:rgb(255, 0, 110);
+  border-radius:5px;
+  box-shadow:10px 10px 10px rgb(57, 26, 122)
+}
+
+@-webkit-keyframes x {
+  100% {
+    -webkit-transform: translateX(calc(100vw - 100px));
+            transform: translateX(calc(100vw - 100px));
+  }
+}
+
+@keyframes x {
+  100% {
+    -webkit-transform: translateX(calc(100vw - 100px));
+            transform: translateX(calc(100vw - 100px));
+  }
+}
+@-webkit-keyframes y {
+  100% {
+    -webkit-transform: translateY(calc(100vh - 100px));
+            transform: translateY(calc(100vh - 100px));
+  }
+}
+@keyframes y {
+  100% {
+    -webkit-transform: translateY(calc(100vh - 100px));
+            transform: translateY(calc(100vh - 100px));
+  }
+}
+
+@-moz-keyframes spin {
+    from { -moz-transform: rotate(0deg); }
+    to { -moz-transform: rotate(360deg); }
+}
+@-webkit-keyframes spin {
+    from { -webkit-transform: rotate(0deg); }
+    to { -webkit-transform: rotate(360deg); }
+}
+@keyframes spin {
+    from {transform:rotate(0deg);}
+    to {transform:rotate(360deg);}
 }
